--- a/adders.html
+++ b/adders.html
@@ -34,7 +34,7 @@ Shor's integer factoring algorithm.<br>
 </p>
 <p><i>nbitadders</i> are closely related to modulo adders.
 <span style="FONT-STYLE: italic">ModNadder </span>could be used to find the 
-integer sum as long as the numbers to be added are both less than <i>N-1</i>. 
+integer sum as long as it is less than <i>N-1</i>. 
 For instance, using the <span style="font-style: italic">m</span><span style="FONT-STYLE: italic">odNadder
 </span>circuit it is possible to add integer numbers with
 <span style="FONT-STYLE: italic">[log (N/2)] </span>digits. Conversely, an <i>
