--- a/hwbpoly.html
+++ b/hwbpoly.html
@@ -36,7 +36,7 @@ circuit.
 This circuit may be simplified to the following when one notices that it 
 suffices to apply <i>cycle1_k</i> to the first 2<sup>k</sup>-1 input bits 
 (counting bits starting with one) of the <i>hwb</i> function to properly calculate the 
-input weight:<p><img border="0" src="hwb7ps.JPG" width="838" height="245"></p>
+input weight:<p><img border="0" src="hwb7ps.jpg" width="838" height="245"></p>
 <p>The circuit in the example above contains 35 gates and has the quantum cost of 
 203. 
 It 
